--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Pagina Principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in error, laudantium similique adipisci aperiam a quis sequi repudiandae possimus? Saepe reiciendis excepturi dolorum tempora. Quidem eum nemo consequatur reprehenderit!</p>
+    <p>Courso</p>
 </body>
 </html>
