--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
     <h1>Pagina Principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in error, laudantium similique adipisci aperiam a quis sequi repudiandae possimus? Saepe reiciendis excepturi dolorum tempora. Quidem eum nemo consequatur reprehenderit!</p>
     <p>Courso</p>
+
+    <ul>
+        <li>Manzana</li>
+        <li>Banana</li>
+        <li>Naranja</li>
+    </ul>
+
+    <ol>
+        <li>Precalentar el horno</li>
+        <li>Mezclar los ingredientes</li>
+        <li>Hornear la mezcla</li>
+    </ol>
 </body>
 </html>
