--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        body {
+            background-color: brown;
+        }
+        ul {
+            border: solid;
+        }
+
+        ol {
+            border: 1px solid black;
+            border-radius: 50px;
+            background-color: blueviolet;
+            color: aliceblue;
+        }
+    </style>
 </head>
 <body>
     <h1>Pagina Principal</h1>
